2013-11-05  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/58984
	* ipa-prop.c (ipa_load_from_parm_agg_1): Add SIZE_P argument,
	set *SIZE_P if non-NULL on success.
	(ipa_load_from_parm_agg, ipa_analyze_indirect_call_uses): Adjust
	callers.
	(ipcp_transform_function): Likewise.  Punt if size of access
	is different from TYPE_SIZE on v->value's type.

2013-11-05  Tobias Burnus  <burnus@net-b.de>

	* doc/invoke.texi (-fopenmp-simd): Document new option.
	* gimplify.c (gimplify_body): Accept -fopenmp-simd.
	* omp-low.c (execute_expand_omp, execute_lower_omp): Ditto.
	* tree.c (attribute_value_equal): Ditto.

2013-11-04  Wei Mi  <wmi@google.com>

	* sched-rgn.c (add_branch_dependences): Keep insns in
	a SCHED_GROUP at the end of BB to remain their location.

2013-11-04  Wei Mi  <wmi@google.com>

	* gcc/config/i386/i386.c (memory_address_length): Extract a part
	of code to rip_relative_addr_p.
	(rip_relative_addr_p): New Function.
	(ix86_macro_fusion_p): Ditto.
	(ix86_macro_fusion_pair_p): Ditto.
	* gcc/config/i386/i386.h: Add new tune features about macro-fusion.
	* gcc/config/i386/x86-tune.def (DEF_TUNE): Ditto.
	* gcc/doc/tm.texi: Generated.
	* gcc/doc/tm.texi.in: Ditto.
	* gcc/haifa-sched.c (try_group_insn): New Function.
	(group_insns_for_macro_fusion): Ditto.
	(sched_init): Call group_insns_for_macro_fusion.
	* gcc/target.def: Add two hooks: macro_fusion_p and
	macro_fusion_pair_p.

2013-11-04  Kostya Serebryany  <kcc@google.com>

	Update to match the changed asan API.
	* asan.c (asan_function_start): New function.
	(asan_emit_stack_protection): Update the string stored in the
	stack red zone to match new API.  Store the PC of the current
	function in the red zone.
	(asan_global_struct): Update the __asan_global definition to match
	the new API.
	(asan_add_global): Ditto.
	* asan.h (asan_function_start): New prototype.
	* final.c (final_start_function): Call asan_function_start.