@@ -1,3 +1,7 @@
+2013-11-05  Marc Glisse  <marc.glisse@inria.fr>
+
+	* gcc.dg/tree-ssa/alias-26.c: New file.
+
 2013-11-05  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/58984
